name:            fetchio
version:         0.4
license:         BSD3
license-file:    LICENSE
author:          Gilles Pirio <g36130@gmail.com>
maintainer:      Gilles Pirio <g36130@gmail.com>
synopsis:        
description:
category:        Web
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/gip/fetchIO






Executable fetchio
  Main-is:             fetchio.hs
  hs-source-dirs:      .
  other-modules:       Ljson, FetchController, Fetcher, FetcherHttpConduit, MsgIO, Amqp, Types
  build-depends: base, stm, conduit, tls, network, connection, old-locale, old-time, text, case-insensitive
               , vector, unordered-containers, zlib, ghc-prim, base64-bytestring, random
               , monads-tf
               , bytestring            >= 0.10.4.0
               , HTTP                  >= 4000.2.8
               , http-types            >= 0.8.2
               , http-conduit          >= 2.0.0.7
               , aeson                 >= 0.6.2.1
               , amqp                  >= 0.7.0
               , string-conversions    >= 0.3.0.2
  ghc-options:         
  extensions: TypeFamilies DeriveGeneric FunctionalDependencies MultiParamTypeClasses LambdaCase FlexibleInstances DeriveDataTypeable DoAndIfThenElse OverloadedStrings ScopedTypeVariables 


